# limen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  landing.yml  release.yml
docs/: 20260712_release_issues.md
landing/: index.html
src/: app.css  app.tsx  main.tsx  settings.css  settings.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/icons/: icon.icns
src-tauri/icons/tray_digits/: .keep
src-tauri/scripts/: gen_tray_digits.py
src-tauri/src/: config.rs  lib.rs  macos.rs  main.rs  perf.rs  persistence.rs  tray.rs  updater.rs
src/components/: shortcut-recorder.css  shortcut-recorder.tsx
src/hooks/: use-space-store.ts
src/lib/: persisted-state.ts  shortcut.ts  space-shortcuts.ts  space-utils.ts
src/perf/: recorder.ts
src/tests/: persisted-state.spec.ts  shortcut.spec.ts  space-shortcuts.spec.ts  space-utils.spec.ts
tooling/scripts/: generate_tray_icons.py
